Update title in index.html to remove Databricks

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manu | Data Analyst & Databricks Engineer</title>
+    <title>Manu | Data Analyst & Data Engineer</title>
     <meta name="description" content="Professional portfolio of Manu, a Data Analyst & Databricks Engineer specializing in ETL pipelines, data transformation, and business insights.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
